--- a/src/style.css
+++ b/src/style.css
@@ -1,5 +1,44 @@
 @import "bootstrap/dist/css/bootstrap.min.css";
+body {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 900px;
+    background-color: green;
+}
 
-body{
-    background: white;
+.carta {
+    width: 500px;
+    height: 700px;
+    background-color: white;
+    border-radius: 10px;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+    align-items: center;
+    position: relative;
+}
+
+.centro {
+    font-size: 200px;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100%;
+}
+.esquina {
+    position: absolute;
+    font-size: 80px;
+}
+.top-left {
+    top: 10px;
+    left: 10px;
+}
+.bottom-right {
+    bottom: 10px;
+    right: 10px;
+    transform: rotate(180deg);
+}
+.rojo{
+    color: red;
 }
